# livraria-beatriz

./: .env  .gitignore  db.sqlite3  livraria.json  livraria_bkp.json  pyproject.toml  python.exe.stackdump  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_livro_capa.py  0003_alter_autor_email.py  0003_livro_autores.py
core/models/: categoria.py  livro.py
core/serializers/: autor.py  categoria.py  editora.py  livro.py
core/views/: autor.py  categoria.py  editora.py  livro.py
livraria/: settings.py  urls.py
