[tool.poetry]
name = "livraria-beatriz"
version = "0.1.0"
description = ""
authors = ["trixaew <biatsmax@gmail.com>"]
readme = "README.md"
packages = [{include = "livraria_beatriz"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
djangorestframework-simplejwt = "^5.2.2"
shell = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
