[tool.poetry]
name = "livraria-beatriz"
version = "0.1.0"
description = ""
authors = ["beatriz"]
readme = "README.md"
packages = [{include = "livraria_beatriz"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.4"
django-cors-headers = "^3.13.0"
djangorestframework-simplejwt = "^5.2.2"
drf-spectacular = "^0.24.2"
django-environ = "^0.9.0"
python-magic = "^0.4.27"
pillow = "^9.3.0"
whitenoise = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
